# docforge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  document_parsing_functional_spec.md  localdocparser_development_roadmap.md  pyproject.toml
.github/workflows/: ci.yml
docforge/: __init__.py  config.py  main.py
docforge/application/: __init__.py  embeddings.py  indexing.py  parsers.py  services.py  vector_store.py
docforge/domain/: __init__.py  models.py  parsing_models.py
docforge/infrastructure/: __init__.py  database.py  storage.py
docforge/interfaces/: __init__.py  api.py  chat_routes.py  pdf_routes.py
tests/: test_documents_upload.py  test_health.py  test_pdf_parser.py  test_rag_pipeline.py
